--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1",
-    "vue-router": "^4.0.0-beta.13",
-    "vuex": "^4.0.0-beta.4"
+    "vue": "^3.0.3",
+    "vue-router": "^4.0.0-rc.5",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "@vue/compiler-sfc": "^3.0.3",
     "eslint": "^7.11.0",
     "eslint-plugin-vue": "^7.0.1",
     "sass": "^1.27.0",
     "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.1"
+    "vite": "^1.0.0-rc.13"
   }
 }
